aggiunta img da data + funzione per cambiare foto al click

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
         <h1 :class="titleColor">{{titleMessage}}</h1>
 
+        <img @click="click" :src="mioSrc" alt="mare">
+
     </div>
     
     <script type="text/javascript" src="js/script.js"></script>
